--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
     <nav class="bg-white shadow-md sticky top-0 z-40">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <div class="bg-blue-600 text-white p-2 rounded-lg mr-3">
+                <div class="bg-red-600 text-white p-2 rounded-lg mr-3">
                     <i class="fas fa-heartbeat text-xl"></i>
                 </div>
-                <a href="#" class="text-2xl font-bold text-blue-800" onclick="showPage('home')">NSG Health</a>
+                <div class="flex flex-col">
+                    <a href="#" class="text-2xl font-bold text-blue-800" onclick="showPage('home')">NSG Health</a>
+                    <span class="text-sm text-gray-600 -mt-1" style="font-style: italic; font-family: 'Times New Roman', serif; transform: skew(-10deg, 0deg);">Your mobile clinic</span>
+                </div>
             </div>
             
             <!-- Mobile Menu Button -->
