--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <div class="mr-3">
-                    <img src="/logo.jpeg" alt="NSG HEALTH Logo" class="h-12">
+                    <img src="logo.jpeg" alt="NSG HEALTH Logo" class="h-12">
                 </div>
                 <div class="flex flex-col">
                     <span class="text-sm text-gray-600" style="font-style: italic; font-family: 'Times New Roman', serif; transform: skew(-10deg, 0deg);"></span>
@@ -1361,7 +1361,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                     <div>
                         <div class="mb-4">
-                            <img src="/logo.jpeg" alt="NSG HEALTH Logo" class="h-15">
+                            <img src="logo.jpeg" alt="NSG HEALTH Logo" class="h-15">
                         </div>
                         <p class="mb-4">Your Mobile Clinic – bringing trusted medical services to your location.</p>
                         <p>"We Take Care of Your Health"</p>
