--- a/index.html
+++ b/index.html
@@ -1722,7 +1722,10 @@
             dynamicGrid.innerHTML = equipmentData.map(equipment => `
                 <div class="product-card bg-white rounded-lg shadow-sm border border-gray-100 p-6 transform hover:scale-105 transition-all duration-300" data-category="${equipment.category}">
                     <div class="bg-gradient-to-br from-green-50 to-blue-50 rounded-lg p-4 mb-4 flex justify-center">
-                        <i class="fas fa-${getCategoryIcon(equipment.category)} text-4xl text-green-600"></i>
+                        ${equipment.image ? 
+                            `<img src="${equipment.image}" alt="${equipment.name}" class="w-16 h-16 object-cover rounded">` : 
+                            `<i class="fas fa-${getCategoryIcon(equipment.category)} text-4xl text-green-600"></i>`
+                        }
                     </div>
                     <div class="flex items-start justify-between mb-2">
                         <h3 class="text-xl font-semibold text-blue-800">${equipment.name}</h3>
