--- a/index.html
+++ b/index.html
@@ -391,10 +391,19 @@
                     </div>
 
                     <div id="products-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
-                        
-                        <!-- BANDAGES & DRESSINGS CATEGORY -->
-                        <!-- Zinc Bandages -->
-                        <div class="product-card bg-white rounded-lg shadow-sm border border-gray-100 p-6" data-category="bandages">
+                        <!-- All equipment is now dynamically loaded from admin panel -->
+                        <!-- Static equipment has been moved to admin management -->
+                        <div class="col-span-full text-center py-16">
+                            <div class="bg-gradient-to-r from-blue-50 to-green-50 rounded-lg p-8 border border-gray-200">
+                                <i class="fas fa-cogs text-6xl text-blue-500 mb-4"></i>
+                                <h3 class="text-2xl font-bold text-blue-800 mb-3">Equipment Loading...</h3>
+                                <p class="text-gray-600 mb-4">Our medical equipment catalog is being loaded from the admin panel.</p>
+                                <div class="flex justify-center">
+                                    <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-500"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                             <div class="bg-blue-50 rounded-lg p-4 mb-4 flex justify-center">
                                 <i class="fas fa-band-aid text-4xl text-blue-600"></i>
                             </div>
