--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
     </div>
     
     <!-- Footer -->
-    <<footer class="bg-blue-800 text-white py-12">
+     <footer class="bg-blue-800 text-white py-12">
             <div class="container mx-auto px-4">
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                     <div>
